learn about id selector child and parent elements and color codes

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ p{
 
 h1{
     font-size: 20px;
-    color: red;
+    color: #f0e239 ;
 
 }
 
@@ -17,6 +17,38 @@ h1{
 .container p{
     color: red;
 }
+/* id selector */
+#college{
+    background-color: green;
+    display: flex ;
+    flex-wrap: wrap;
+    /* padding: 4px; */
+    padding-left: 5px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* flex-direction:column-reverse; */
+}
+
+#college p{
+    color: white;
+
+}
+
+
+/* css for image element */
+img{
+    
+    height: 100px;
+    width: 200px;
+    /* margin: 10px; */
+    margin-top: 10px ;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 30px;
+    
+}
+
 
 
 
